sandbox/output
HikerTest.java:28: error: method two() is already defined in class HikerTest
    public void two() {
                ^
1 error
